fixed gutters on mobile, also footer tweak

--- a/app/styles/footer.module.scss
+++ b/app/styles/footer.module.scss
@@ -1,5 +1,5 @@
 .footer{
-  margin-top: auto;
+  margin-top: 2rem;
   background-color: rgb(25, 28, 33);
   // min-height: 4rem;
   padding: 2rem 1rem;
